intel/bench_214_new/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/log.txt
bench_214_new/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:44:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FAST;
                       ^~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:80:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FULL;
                       ^~~~~~~~~~~~~~~~
bench_214_new/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:84:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_MED;
                       ^~~~~~~~~~~~~~~
bench_214_new/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:86:9: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
        return UPDATE_TYPE_FAST;
               ^~~~~~~~~~~~~~~~
4 errors generated.
HLS FPGA Parse FAILED.
